--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,7 @@
+html {
+  position: relative;
+}
+
 /* Character Card Animations */
 
 @keyframes card-wiggle {
@@ -100,4 +104,10 @@
   color: red;
   font-weight: bold;
   transform: rotate(-61deg);
+}
+
+.reset-btn {
+  font-weight: bold;
+  border: 2px solid black;
+  border-radius: 6px;
 }
